--- a/_data/template.yml
+++ b/_data/template.yml
@@ -46,5 +46,5 @@ social:
     url: #
 
 user:
-  - name: Ashima Jain
-    designation: Lead Engineer, Data Scientist
+  name: Ashima Jain
+  designation: Lead Engineer, Data Scientist
